begin gemaakt aan cards-section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,45 @@
 
 </header>
 <main class="main">
+
+    <div class="card-section">
+        <h2>Wat zeggen klanten over ons</h2>
+
+        <div class="card">
+
+           <div class="blockquote"><img src="./assets/icons/quote-left.png" alt="">
+           </div>
+
+            <div class="card-content">
+                <div><p>Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk. Snelle response, zelfs op momenten dat je het niet verwacht.</p>
+                </div>
+
+                <div class="card-profile">
+                <img src="./assets/images/avatar-jane.png" alt="profile-image"><p>Jane Doe, Managing Director</p>
+                </div>
+
+                </div>
+
+        </div>
+        <div class="card">
+
+        <div class="blockquote"><img src="./assets/icons/quote-left.png" alt="">
+        </div>
+
+        <div class="card-content">
+            <div><p>Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen en goede service maakt dat ik TransIP aan iedereen aanbeveel.</p>
+            </div>
+
+            <div class="card-profile">
+                <img src="./assets/images/avatar-john.png" alt="profile-image"><p>John Smith, Frontend Developer</p>
+            </div>
+
+        </div>
+
+    </div>
+
+
+    </div>
 </main>
 <footer class="footer">
 
