--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
 
 </header>
 <main class="main">
-
-    <div class="card-section">
-        <h2>Wat zeggen klanten over ons</h2>
+    <section class="card-section">
+        <h2 class="section-heading">Wat zeggen klanten over ons</h2>
 
         <div class="card">
 
-           <div class="blockquote"><img src="./assets/icons/quote-left.png" alt="">
+           <div class="blockquote"><img height="25px" src="./assets/icons/quote-left.png" alt="">
            </div>
 
             <div class="card-content">
@@ -43,7 +42,7 @@
         </div>
         <div class="card">
 
-        <div class="blockquote"><img src="./assets/icons/quote-left.png" alt="">
+        <div class="blockquote"><img height="25px" src="./assets/icons/quote-left.png" alt="">
         </div>
 
         <div class="card-content">
@@ -59,11 +58,54 @@
     </div>
 
 
-    </div>
+    </section>
+    <section class="support">
+        <h2 class="section-heading">Wij staan voor je klaar</h2>
+        <img class="support-img" src="./assets/images/callcenter.jpg" alt="People at Callcenter">
+        <p class="support-copy">Je kunt 7 dagen per week bij ons <a href="./team.html">team</a> terecht. Ons team van vakkundige medewerkers helpt je graag op weg.</p>
+        <button class="contact-button">Neem contact op</button>
+    </section>
+
+    <section class="faq">
+        <h2 class="section-heading">Veelgestelde vragen</h2>
+
+        <div class="faq-content">
+            <details>
+                <summary>Wat is een goede domeinnaam?</summary>
+                <div class="faq-details">
+                Een goede domeinnaam moet aan enkele eisen voldoen. Ten eerste mag jouw domeinnaam niet in strijd zijn met de openbare orde of de goede zeden. Dit betekent dat je geen ongepaste domeinnaam mag registreren. Verder mag een domeinnaam enkel uit letters, cijfers en eventueel een liggend streepje bestaan. Andere leestekens zijn niet toegestaan.
+                </div>
+            </details>
+        <details>
+            <summary>Welke extensie moet ik kiezen voor mijn domeinnaam?</summary>
+            <div class="faq-details">
+            Je mag helemaal zelf kiezen welke extensie jouw domeinnaam krijgt. Dit kan een .nl-extensie zijn, maar ook een .be-extensie, een .de-extensie of een .com-extensie. Vraag jezelf af op welke markt je je gaat richten, in het heden én in de toekomst. Ben je niet van plan je business de grens over te brengen? Dan heb je eigenlijk alleen een .nl-domeinnaam nodig. Je kunt andere extensies registreren om te voorkomen dat anderen dit doen, maar deze domeinnamen ga je waarschijnlijk niet zelf gebruiken.
+                </div>
+        </details>
+
+        <details>
+            <summary>Wat moet ik doen als mijn domeinnaam al geregistreerd is?</summary>
+            <div class="faq-details">
+            Is de domeinnaam die jij wil registreren, al geregistreerd door iemand anders? Dan kun je deze niet opnieuw registreren. Jouw domeinnaam moet namelijk uniek zijn. Als je gewenste domeinnaam al geregistreerd is, heb je twee mogelijkheden. Ten eerste kun je ervoor kiezen een alternatieve domeinnaam te registreren. Dit kan een domeinnaam zijn die op jouw eerste keuze lijkt, maar ook een heel ander domein. Je vindt vanzelf wel een goede domeinnaam die nog vrij is.
+            </div>
+        </details>
+        <details>
+            <summary>Is het mogelijk meerdere domeinnamen te registreren?</summary>
+            <div class="faq-details"> Ja, het is zeker mogelijk meerdere domeinnamen te registreren. Als je zou willen, kun je wel tientallen domeinnamen registreren. Houd er wel rekening mee dat iedere domeinnaam die je registreert, geld kost. Hoe meer domeinnamen je registreert, des te meer geld je moet betalen voor deze domeinen.
+            </div>
+        </details>
+        <details>
+            <summary>Is het mogelijk een domeinnaam te registreren en deze niet te gebruiken?
+            </summary>
+            <div class="faq-details">
+            Ja, je kunt een domeinnaam registreren zonder deze te gebruiken. Dit gebeurt regelmatig. Ten eerste zijn er veel ondernemers die de domeinnaam van hun nieuwe bedrijf alvast registreren, terwijl ze nog lang geen website hebben. Zij willen simpelweg zeker weten dat de domeinnaam nog beschikbaar is als hun website af is en registreren deze daarom alvast. Verstandig, zeker als je een domeinnaam wil registreren die andere mensen ook interessant kunnen vinden.
+            </div>
+        </details>
+        </div>
+    </section>
 </main>
 <footer class="footer">
-
+    <h6>Copyright © 2022, all rights reserved.</h6>
 </footer>
-
 </body>
 </html>
