Laatste elementen toegevoegd incl. footer // huiswerk v1 afgerond

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 <header class="header">
@@ -26,46 +27,50 @@
 
         <div class="card">
 
-           <div class="blockquote"><img height="25px" src="./assets/icons/quote-left.png" alt="">
-           </div>
+            <div class="blockquote"><img height="25px" src="./assets/icons/quote-left.png" alt="">
+            </div>
 
             <div class="card-content">
-                <div><p>Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk. Snelle response, zelfs op momenten dat je het niet verwacht.</p>
+                <div><p>Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk.
+                    Snelle response, zelfs op momenten dat je het niet verwacht.</p>
                 </div>
 
                 <div class="card-profile">
-                <img src="./assets/images/avatar-jane.png" alt="profile-image"><p>Jane Doe, Managing Director</p>
+                    <img src="./assets/images/avatar-jane.png" alt="profile-image">
+                    <p>Jane Doe, Managing Director</p>
                 </div>
 
-                </div>
+            </div>
 
         </div>
         <div class="card">
 
-        <div class="blockquote"><img height="25px" src="./assets/icons/quote-left.png" alt="">
-        </div>
-
-        <div class="card-content">
-            <div><p>Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen en goede service maakt dat ik TransIP aan iedereen aanbeveel.</p>
+            <div class="blockquote"><img height="25px" src="./assets/icons/quote-left.png" alt="">
             </div>
 
-            <div class="card-profile">
-                <img src="./assets/images/avatar-john.png" alt="profile-image"><p>John Smith, Frontend Developer</p>
+            <div class="card-content">
+                <div><p>Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen en goede service
+                    maakt dat ik TransIP aan iedereen aanbeveel.</p>
+                </div>
+
+                <div class="card-profile">
+                    <img src="./assets/images/avatar-john.png" alt="profile-image">
+                    <p>John Smith, Frontend Developer</p>
+                </div>
+
             </div>
 
         </div>
-
-    </div>
 
 
     </section>
     <section class="support">
         <h2 class="section-heading">Wij staan voor je klaar</h2>
         <img class="support-img" src="./assets/images/callcenter.jpg" alt="People at Callcenter">
-        <p class="support-copy">Je kunt 7 dagen per week bij ons <a href="./team.html">team</a> terecht. Ons team van vakkundige medewerkers helpt je graag op weg.</p>
+        <p class="support-copy">Je kunt 7 dagen per week bij ons <a href="./team.html">team</a> terecht. Ons team van
+            vakkundige medewerkers helpt je graag op weg.</p>
         <button class="contact-button">Neem contact op</button>
     </section>
-
     <section class="faq">
         <h2 class="section-heading">Veelgestelde vragen</h2>
 
@@ -73,39 +78,92 @@
             <details>
                 <summary>Wat is een goede domeinnaam?</summary>
                 <div class="faq-details">
-                Een goede domeinnaam moet aan enkele eisen voldoen. Ten eerste mag jouw domeinnaam niet in strijd zijn met de openbare orde of de goede zeden. Dit betekent dat je geen ongepaste domeinnaam mag registreren. Verder mag een domeinnaam enkel uit letters, cijfers en eventueel een liggend streepje bestaan. Andere leestekens zijn niet toegestaan.
+                    Een goede domeinnaam moet aan enkele eisen voldoen. Ten eerste mag jouw domeinnaam niet in strijd
+                    zijn met de openbare orde of de goede zeden. Dit betekent dat je geen ongepaste domeinnaam mag
+                    registreren. Verder mag een domeinnaam enkel uit letters, cijfers en eventueel een liggend streepje
+                    bestaan. Andere leestekens zijn niet toegestaan.
                 </div>
             </details>
-        <details>
-            <summary>Welke extensie moet ik kiezen voor mijn domeinnaam?</summary>
-            <div class="faq-details">
-            Je mag helemaal zelf kiezen welke extensie jouw domeinnaam krijgt. Dit kan een .nl-extensie zijn, maar ook een .be-extensie, een .de-extensie of een .com-extensie. Vraag jezelf af op welke markt je je gaat richten, in het heden én in de toekomst. Ben je niet van plan je business de grens over te brengen? Dan heb je eigenlijk alleen een .nl-domeinnaam nodig. Je kunt andere extensies registreren om te voorkomen dat anderen dit doen, maar deze domeinnamen ga je waarschijnlijk niet zelf gebruiken.
+            <details>
+                <summary>Welke extensie moet ik kiezen voor mijn domeinnaam?</summary>
+                <div class="faq-details">
+                    Je mag helemaal zelf kiezen welke extensie jouw domeinnaam krijgt. Dit kan een .nl-extensie zijn,
+                    maar ook een .be-extensie, een .de-extensie of een .com-extensie. Vraag jezelf af op welke markt je
+                    je gaat richten, in het heden én in de toekomst. Ben je niet van plan je business de grens over te
+                    brengen? Dan heb je eigenlijk alleen een .nl-domeinnaam nodig. Je kunt andere extensies registreren
+                    om te voorkomen dat anderen dit doen, maar deze domeinnamen ga je waarschijnlijk niet zelf
+                    gebruiken.
                 </div>
-        </details>
+            </details>
 
-        <details>
-            <summary>Wat moet ik doen als mijn domeinnaam al geregistreerd is?</summary>
-            <div class="faq-details">
-            Is de domeinnaam die jij wil registreren, al geregistreerd door iemand anders? Dan kun je deze niet opnieuw registreren. Jouw domeinnaam moet namelijk uniek zijn. Als je gewenste domeinnaam al geregistreerd is, heb je twee mogelijkheden. Ten eerste kun je ervoor kiezen een alternatieve domeinnaam te registreren. Dit kan een domeinnaam zijn die op jouw eerste keuze lijkt, maar ook een heel ander domein. Je vindt vanzelf wel een goede domeinnaam die nog vrij is.
-            </div>
-        </details>
-        <details>
-            <summary>Is het mogelijk meerdere domeinnamen te registreren?</summary>
-            <div class="faq-details"> Ja, het is zeker mogelijk meerdere domeinnamen te registreren. Als je zou willen, kun je wel tientallen domeinnamen registreren. Houd er wel rekening mee dat iedere domeinnaam die je registreert, geld kost. Hoe meer domeinnamen je registreert, des te meer geld je moet betalen voor deze domeinen.
-            </div>
-        </details>
-        <details>
-            <summary>Is het mogelijk een domeinnaam te registreren en deze niet te gebruiken?
-            </summary>
-            <div class="faq-details">
-            Ja, je kunt een domeinnaam registreren zonder deze te gebruiken. Dit gebeurt regelmatig. Ten eerste zijn er veel ondernemers die de domeinnaam van hun nieuwe bedrijf alvast registreren, terwijl ze nog lang geen website hebben. Zij willen simpelweg zeker weten dat de domeinnaam nog beschikbaar is als hun website af is en registreren deze daarom alvast. Verstandig, zeker als je een domeinnaam wil registreren die andere mensen ook interessant kunnen vinden.
-            </div>
-        </details>
+            <details>
+                <summary>Wat moet ik doen als mijn domeinnaam al geregistreerd is?</summary>
+                <div class="faq-details">
+                    Is de domeinnaam die jij wil registreren, al geregistreerd door iemand anders? Dan kun je deze niet
+                    opnieuw registreren. Jouw domeinnaam moet namelijk uniek zijn. Als je gewenste domeinnaam al
+                    geregistreerd is, heb je twee mogelijkheden. Ten eerste kun je ervoor kiezen een alternatieve
+                    domeinnaam te registreren. Dit kan een domeinnaam zijn die op jouw eerste keuze lijkt, maar ook een
+                    heel ander domein. Je vindt vanzelf wel een goede domeinnaam die nog vrij is.
+                </div>
+            </details>
+            <details>
+                <summary>Is het mogelijk meerdere domeinnamen te registreren?</summary>
+                <div class="faq-details"> Ja, het is zeker mogelijk meerdere domeinnamen te registreren. Als je zou
+                    willen, kun je wel tientallen domeinnamen registreren. Houd er wel rekening mee dat iedere
+                    domeinnaam die je registreert, geld kost. Hoe meer domeinnamen je registreert, des te meer geld je
+                    moet betalen voor deze domeinen.
+                </div>
+            </details>
+            <details>
+                <summary>Is het mogelijk een domeinnaam te registreren en deze niet te gebruiken?
+                </summary>
+                <div class="faq-details">
+                    Ja, je kunt een domeinnaam registreren zonder deze te gebruiken. Dit gebeurt regelmatig. Ten eerste
+                    zijn er veel ondernemers die de domeinnaam van hun nieuwe bedrijf alvast registreren, terwijl ze nog
+                    lang geen website hebben. Zij willen simpelweg zeker weten dat de domeinnaam nog beschikbaar is als
+                    hun website af is en registreren deze daarom alvast. Verstandig, zeker als je een domeinnaam wil
+                    registreren die andere mensen ook interessant kunnen vinden.
+                </div>
+            </details>
         </div>
     </section>
 </main>
 <footer class="footer">
-    <h6>Copyright © 2022, all rights reserved.</h6>
+
+
+    <div class="footer-menu">
+        <div class="footer-logo">
+            <h3>Domein.shop®</h3>
+            <P>Snel, Goedkoop & Duurzaam Hosten</P>
+        </div>
+
+        <div class="line-div"></div>
+
+        <div class="footer-menuitems">
+            <ul>
+                <li>Home</li>
+                <li>Mijn Domein.shop</li>
+                <li>Team</li>
+                <li>Werken bij</li>
+            </ul>
+        </div>
+
+        <div class="footer-seo">
+            <ul>
+                <li>Goedkope Domeinregistratie</li>
+                <li>Domeinregistratie voor 1 euro</li>
+                <li>.nl Domeinregistratie</li>
+                <li>Domein met hosting</li>
+                <li>Webhosting & DNS beheer</li>
+            </ul>
+        </div>
+
+    </div>
+
+
 </footer>
+<section class="copyrights">
+    <h6>Copyright © 2022, all rights reserved.</h6>
+</section>
 </body>
 </html>
